fixed bar chart alignment issues

--- a/style.css
+++ b/style.css
@@ -169,6 +169,8 @@ body {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     padding: 1rem;
     text-align: center;
+    z-index: 2;
+
 }
 
 .metric__icon {
@@ -210,12 +212,10 @@ body {
 
 /* Bar Charts */
 .barcharts__container {
-    margin: 80px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    flex-wrap: nowrap;
-    gap: 40px;
+    gap: 20px;
 }
 
 .chart {
@@ -224,8 +224,10 @@ body {
     background-color: #ffffff;
     border-radius: 8px;
     padding: 20px;
-    width: 45%;
+    width: 95%;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-top: 30px;
+    z-index: 2;
 }
 
 h3 {
@@ -258,7 +260,6 @@ h3 {
 
 /* Pie Chart Section */
 .chart__container {
-    margin: 80px;
     display: flex;
     flex-direction: row;
     background-color: #ffffff;
@@ -266,9 +267,9 @@ h3 {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
     gap: 20px;
+    margin-top: 30px;
 }
 .info {
-    margin: 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -312,15 +313,17 @@ h3 {
         flex-direction: column;
     } 
     .barcharts__container {
-        /* flex-wrap: wrap; */
         flex-direction: column;
         align-items: center;
-        margin: 16px;
+        justify-content: center;
     }
-    /* Bar Chart Adjustments */
+    .bar__label, .bar__value{
+        font-size: 16px;
+    }
     .bar{
-        height: 30px;
-    }    
+        height: 25px;
+    }
+    
 }
 @media (max-width: 1024px) {
 
@@ -336,10 +339,6 @@ h3 {
     }
 
     .metrics__container {
-        flex-wrap: wrap;
-    }
-
-    .barcharts__container {
         flex-wrap: wrap;
     }
     .chart__container {
@@ -372,7 +371,6 @@ h3 {
 }
 
 @media (max-width: 768px) {
-
     .pattern__left,
     .pattern__right {
         width: 20%;
@@ -444,25 +442,23 @@ h3 {
     }
 
     /* Bar Charts Adjustments */
-    .barcharts__container{
-        margin: 8px;
-    }
     h3{
-        font-size: 16px
+        font-size: 12px
     }
     .bar__label,
     .bar__value {
-        font-size: 12px;
+        font-size: 8px;
     }
     .bar{
         height: 25px;
+        
     }
 
     /* Pie Charts adjustments */
     .chart__container {
         flex-direction: column;
-        margin: 16px;
-
+        /* margin: 0px; */
+    
     }
     .info{
         flex-direction: column;
